# warden

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
agent/: llm.py  loop.py
core/: algebra.py  labels.py  oracle.py  postgres_store.py  rebac.py  store.py
docs/bench/: table1_overhead.md  table2_recall.md  table3_scaling.md  table4_revocation.md
evals/: corpus.py  differential.py  generators.py
evals/bench/: _common.py  run.py  table1_overhead.py  table2_recall.py  table3_scaling.py  table4_revocation.py
evals/scenarios/: _shared.py  run_all.py  scenario_01_semantic_neighbor.py  scenario_02_ethical_wall.py  scenario_03_stale_revocation.py  scenario_04_inflight_revocation.py  scenario_05_citation_leak.py  scenario_06_cross_tenant_space.py  scenario_07_expired_guest.py  scenario_08_transitive_nesting.py  scenario_09_deleted_embedded.py  scenario_10_prompt_injection.py
gateway/: api.py  audit.py  demo.py  gates.py  session.py
retrieval/: index.py  strategies.py
sql/: 001_init.sql  002_documents.sql  003_audit.sql
tests/: test_api.py  test_audit.py  test_differential.py  test_gates.py  test_generators.py  test_labels.py  test_labels_redis.py  test_oracle.py  test_postgres_store.py  test_rebac.py  test_retrieval_pgvector.py  test_scenarios.py  test_session.py
